# ttsutil

./: .gitignore  README.md  createttstemplate.py  prep_release.py  pyproject.toml  template.json  ttsfromtemplate_awspolly.py  ttsfromtemplate_ttsmonster.py  ttsutil.py  updateallsoundpacks.py
